[package]
name = "groestlcoincore-rpc"
version = "0.18.0"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/Groestlcoin/rust-groestlcoincore-rpc/"
repository = "https://github.com/Groestlcoin/rust-groestlcoincore-rpc/"
description = "RPC client library for the Groestlcoin Core JSON-RPC API."
keywords = ["crypto", "groestlcoin", "groestlcoin-core", "rpc"]
readme = "README.md"
edition = "2018"

[lib]
name = "groestlcoincore_rpc"
path = "src/lib.rs"

[dependencies]
groestlcoincore-rpc-json = { version = "0.18.0", path = "../json" }

log = "0.4.5"
jsonrpc = "0.14.0"

# Used for deserialization of JSON.
serde = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3.3.0"
