[package]
name = "groestlcoincore-rpc-json"
version = "0.14.0"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/Groestlcoin/rust-groestlcoincore-rpc/"
repository = "https://github.com/Groestlcoin/rust-groestlcoincore-rpc/"
description = "JSON-enabled type structs for groestlcoincore-rpc crate."
keywords = [ "crypto", "groestlcoin", "groestlcoin-core", "rpc" ]
readme = "README.md"

[lib]
name = "groestlcoincore_rpc_json"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

groestlcoin = { version = "0.27", features = [ "use-serde" ] }
